<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="2"
        android:gravity="center|end"
        android:hint=""
        android:maxLength="100"
        android:padding="10dp"
        android:textColor="#150202"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|end"
        android:padding="10dp"
        android:textColor="#9F1515"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="15">


        <Button
            android:id="@+id/open"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/open"
            android:textColor="#150202"
            android:textSize="30sp"
            tools:ignore="DuplicateIds,NestedWeights" />

        <Button
            android:id="@+id/close"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/fghjk"
            android:textColor="#0E0101"
            android:textSize="30sp"
            tools:ignore="DuplicateIds,NestedWeights" />

        <Button
            android:id="@+id/root"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/history"
            android:textColor="#150202"
            android:textSize="25sp"
            tools:ignore="DuplicateIds,NestedWeights" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/sin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sin"
            android:textAllCaps="false"
            android:textColor="#120202"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/cos"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cos"
            android:textAllCaps="false"
            android:textColor="#130101"
            android:textSize="24sp" />

        <Button
            android:id="@+id/tan"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tan"
            android:textAllCaps="false"
            android:textColor="#0C0000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/pi"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pi"
            android:textAllCaps="false"
            android:textColor="#0C0000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/root"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/root"
            android:textColor="#190202"
            android:textSize="30sp"
            tools:ignore="DuplicateIds" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/svn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textColor="#120101"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/ate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textColor="#0E0101"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textColor="#150101"
            android:textSize="30sp" />


        <Button
            android:id="@+id/log"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/log"
            android:textAllCaps="false"
            android:textColor="#0C0000"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />


        <Button
            android:id="@+id/ln"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ln"
            android:textAllCaps="false"
            android:textColor="#0C0000"
            android:textSize="24sp" />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/four"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textColor="#0B0000"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/fiv"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textColor="#0B0000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/six"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textColor="#120101"
            android:textSize="30sp" />

        <Button
            android:id="@+id/minus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textColor="#100101"
            android:textSize="30sp" />

        <Button
            android:id="@+id/pls"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="#100000"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/one"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_1"
                    android:textColor="#0E0000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/two"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_2"
                    android:textColor="#170101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/three"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_3"
                    android:textColor="#150101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/into"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mul"
                    android:textColor="#0E0000"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/clr"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/c"
                    android:textColor="#0C0000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/zro"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textColor="#100101"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/dot"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dot"
                    android:textColor="#0C0000"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/div"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/div"
                    android:textColor="#0E0101"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mul"
                    android:textColor="#120000"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/eql"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/eql"
                android:textColor="#0B0101"
                android:textSize="30sp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>